fix: remove white space bounce when scrolling to the top or bottom of page

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -8,5 +13,6 @@ body {
     ),
     url('./drums.jpg');
   background-size: cover;
-  position: relative;
+  overflow: auto;
+  height: 100%;
 }
